<resources>
    <string name="app_name">Help Me Remind</string>

    <string name="reminder_input_title">Title</string>
    <string name="reminder_input_text">Note</string>
    <string name="reminder_info_text"><i>Reminder example</i></string>

    <string name="button_bar_title">Remind me:</string>

    <string name="button_bar_button1">Now</string>
    <string name="button_bar_button2">At 1 Hour</string>
    <string name="button_bar_button3">At 3 Hours</string>
    <string name="button_bar_button4">Specific</string>

    <string name="add_reminder_button">Add Reminder</string>

    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>

    <string name="reminder_set_message">Reminder is set.</string>

    <string name="please_set_time_message">Please set the reminder time.</string>
    <string name="please_set_title_message">Please set at least the reminder title.</string>

    <string name="reminder_example_title">Example title</string>
    <string name="reminder_example_text">Example note</string>

    <string name="reminder_notification_touch_text">Swipe to delete.</string>
    <string name="reminder_notification_deleted_text">Reminder deleted.</string>


</resources>
