<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusableInTouchMode="true"
    app:autoSizeTextType="uniform">

    <View
        android:id="@+id/reminder_container"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:tint="@color/colorTextSecondary"
        app:layout_constraintStart_toStartOf="@+id/reminder_container"
        app:layout_constraintTop_toTopOf="@+id/reminder_container"
        app:srcCompat="@drawable/ic_notification_icon" />

    <TextView
        android:id="@+id/notificationAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:text="@string/app_name"
        android:textColor="@color/colorTextSecondary"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/reminder_container" />

    <TextView
        android:id="@+id/notificationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="12:00"
        android:textColor="@color/colorTextSecondary"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/notificationAppName"
        app:layout_constraintTop_toTopOf="@+id/reminder_container" />

    <TextView
        android:id="@+id/reminder_example_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reminder_example_title"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="@+id/reminder_container"
        app:layout_constraintStart_toStartOf="@+id/reminder_container"
        app:layout_constraintTop_toBottomOf="@+id/notificationAppName" />

    <TextView
        android:id="@+id/reminder_example_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reminder_example_text"
        android:textColor="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="@+id/reminder_container"
        app:layout_constraintStart_toStartOf="@+id/reminder_container"
        app:layout_constraintTop_toBottomOf="@+id/reminder_example_title" />

    <TextView
        android:id="@+id/reminder_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:paddingLeft="10dp"
        android:textSize="10dp"
        android:gravity="left"
        android:text="@string/reminder_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder_container" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reminder_input_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder_info"
        android:textColorHint="@color/colorTextSecondary">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reminder_input_title"
            android:textColor="@color/colorTextPrimary"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reminder_input_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder_input_title"
        android:textColorHint="@color/colorTextSecondary" >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reminder_input_text"
            android:textColor="@color/colorTextPrimary"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/button_bar_title"
        android:textColor="@color/colorTextPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_bar_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder_input_text" />

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_bar_title">

        <Button
            android:id="@+id/button_bar_button1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonBarButton1Pressed"
            android:text="@string/button_bar_button1"
            android:singleLine="true"
            android:textColor="@color/colorTextAndIcons" />

        <Button
            android:id="@+id/button_bar_button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonBarButton2Pressed"
            android:text="@string/button_bar_button2"
            android:singleLine="true"
            android:textColor="@color/colorTextAndIcons" />


        <Button
            android:id="@+id/button_bar_button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonBarButton3Pressed"
            android:text="@string/button_bar_button3"
            android:singleLine="true"
            android:textColor="@color/colorTextAndIcons" />

        <Button
            android:id="@+id/button_bar_button4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonBarButton4Pressed"
            android:text="@string/button_bar_button4"
            android:singleLine="true"
            android:textColor="@color/colorTextAndIcons" />

    </LinearLayout>

    <ru.dimorinny.floatingtextbutton.FloatingTextButton
        android:id="@+id/add_reminder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:floating_background_color="@color/colorPrimary"
        app:floating_left_icon="@android:drawable/ic_input_add"
        app:floating_title="@string/add_reminder_button"
        app:floating_title_color="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>